Some refactorings according to SonarLint