@@ -2,7 +2,6 @@ package guru.springframework.sfgrestbrewery.security.services;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -34,9 +33,9 @@ public class UserDetailsImpl implements UserDetails{
 	}
 	
 	public static UserDetailsImpl build(User user) {
-		List<GrantedAuthority> authorties = user.getRoles().stream()
+		List<SimpleGrantedAuthority> authorties = user.getRoles().stream()
 				.map(role -> new SimpleGrantedAuthority(role.getName().name()))
-				.collect(Collectors.toList());
+				.toList();
 		
 		return new UserDetailsImpl(
 				user.getId(), 
